<resources>
    <string name="app_name">Carloan</string>
    <string name="default_fill">默认填充</string>
    <string name="device_type_count">全部(%1$d) |在线(%2$d) |离线(%3$d) |报警(%4$d)</string>
    <string name="device_list">设备列表</string>
    <string name="appointment_unpack">预约拆机</string>
    <string name="warn_info">报警信息</string>
    <string name="onsite_photo">现场拍照</string>
    <string name="my_tasks">我的任务</string>
    <string name="coming_soon">敬请期待</string>
    <string name="device_type_percent_count">%1$d%%&#160;&#160;&#160;&#160;%2$d辆</string>
    <string name="base_setting">基本设置</string>
    <string name="monitor_refresh_time">监控刷新时间</string>
    <string name="trace_refresh_time">追踪刷新时间</string>
    <string name="warn_info_setting">报警信息设置</string>
    <string name="fix_password">修改密码</string>
    <string name="ori_password">原始密码</string>
    <string name="input_ori_password">请输入原始密码</string>
    <string name="new_password">新设密码</string>
    <string name="input_new_password">请输入新设密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_confirm_password">请输入确认密码</string>
    <string name="confirm_fix">确认修改</string>
    <string name="warnsetting_receiver">(全选)设置接收报警消息类型</string>
    <string name="main_page">首页</string>
    <string name="monitor">监控</string>
    <string name="my">我的</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="change_phone">更改手机号</string>
    <string name="bind_phone">绑定手机号码：%1$s</string>
    <string name="exit">退出</string>
    <string name="phone">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="intpu_auth_code">请输入验证码</string>
    <string name="obtain_auth_code">获取验证码</string>
    <string name="bind">立即绑定</string>
    <string name="sender">发送人：%1$s</string>
    <string name="plate">车牌号：%1$s</string>
    <string name="in_progress_task">未完成(%1$d)</string>
    <string name="finish_task">已完成(%1$d)</string>
    <string name="upload_photo">上传照片</string>
    <string name="take_task_photo_tip1">*上传与车辆无关的图片将无法通过审核！</string>
    <string name="take_task_photo_tip2">请在停车点上传车牌照，车牌和人等证明车辆安全的照片。至少上传1张，最多3张。</string>
    <string name="confirm_upload">确认上传</string>
    <string name="site_nocar">现场无车</string>
    <string name="take_task_photo_tip3">若现场没有车辆请拍现场环境，并勾起“现场无车</string>
    <string name="confirm">确认</string>
    <string name="untreated">未处理(%1$d)</string>
    <string name="processed">已处理(%1$d)</string>
    <string name="no_photo">未拍照(%1$d)</string>
    <string name="has_photo">已拍照(%1$d)</string>
    <string name="sender_time">发送人：%1$s%n时间：%2$s</string>
    <string name="principal_time">负责人：%1$s%n%2$s</string>
    <string name="account_group">账号：%1$s%n%n所属组：%2$s</string>
    <string name="days_no_photo">%1$s天未拍照</string>
    <string name="again_photograph">请重拍</string>
    <string name="confige_device">配置设备</string>
    <string name="history_trace">历史轨迹</string>
    <string name="realtime_position">实时跟踪</string>
    <string name="device_detail">设备详情</string>
    <string name="navigation">导航</string>
    <string name="photo">拍照</string>
    <string name="takephoto_position">拍照位置：%1$s</string>
    <string name="takephoto_position_ok">位置信息一致</string>
    <string name="takephoto_position_notice">位置信息不一致</string>
    <string name="input_search_content">请输入搜索内容</string>
    <string name="device_intro_info">设备号：%1$s%n设备类型：%2$s%n设备状态：%3$s%n所属分组：%4$s</string>
    <string name="current_device_warn">当前设备报警信息</string>
    <string name="relative_car">关联车辆：%1$s</string>
    <string name="remove_device">拆除设备</string>
    <string name="info">信息</string>
    <string name="trace">追踪</string>
    <string name="history_view">回放</string>
    <string name="trace_end_tip">播放完毕，本次共播放%1$d个点</string>
    <string name="cancel_order">取消订单</string>
    <string name="tip_order">提醒订单</string>
    <string name="open_order">待接订单</string>
    <string name="received_order">已接订单</string>
    <string name="appointment">预约</string>
    <string name="next">下一步</string>
    <string name="select_unpack_device">选择拆除设备</string>
    <string name="commit">提交</string>
    <string name="relative_device">关联设备</string>
    <string name="device_name">拆机车辆：%1$s %2$4s</string>
    <string name="all">全部(%1$d)</string>
    <string name="online">在线(%1$d)</string>
    <string name="offline">离线(%1$d)</string>
    <string name="warn">报警(%1$d)</string>
    <string name="state">状态</string>
    <string name="group">分组</string>
    <string name="type">类型</string>
    <string name="time">时间</string>
    <string name="group_leaf_detail">%1$s %2$8s %n%3$s(%4$s)</string>

    <string-array name="setting_refresh_time">
        <item>10秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>3分钟</item>
        <item>5分钟</item>
    </string-array>

    <string-array name="trace_time_array">
        <item>今天</item>
        <item>昨天</item>
        <item>近7天</item>
        <item>自定义</item>
    </string-array>

    <string-array name="warn_style_array">
        <item>低电报警</item>
        <item>断电报警</item>
        <item>超速报警</item>
        <item>离省报警</item>
        <item>围栏报警</item>
        <item>上线报警</item>
        <item>行驶报警</item>
        <item>停车报警</item>
        <item>开盖报警</item>
        <item>拆机报警</item>
        <item>屏蔽报警</item>
        <item>字母报警</item>
        <item>剪线报警</item>
        <item>关机报警</item>
    </string-array>

    <string-array name="warn_status_array">
        <item>全部</item>
        <item>未处理</item>
        <item>已处理</item>
        <item>已恢复</item>
    </string-array>
</resources>
