<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/FixPassword_LinearLayout">

        <TextView
            style="@style/FixPassword_TextView"
            android:text="@string/ori_password" />

        <EditText
            android:id="@+id/fixpassword_oripass_et"
            style="@style/FixPassword_EditText"
            android:hint="@string/input_ori_password" />
    </LinearLayout>

    <include layout="@layout/devider_gray_match" />

    <LinearLayout style="@style/FixPassword_LinearLayout">

        <TextView
            style="@style/FixPassword_TextView"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/fixpassword_newpass_et"
            style="@style/FixPassword_EditText"
            android:hint="@string/input_new_password" />
    </LinearLayout>

    <include layout="@layout/devider_gray_match" />

    <LinearLayout style="@style/FixPassword_LinearLayout">

        <TextView
            style="@style/FixPassword_TextView"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/fixpassword_confirmnewpass_et"
            style="@style/FixPassword_EditText"
            android:hint="@string/input_confirm_password" />
    </LinearLayout>

    <Button
        android:id="@+id/fixpassword_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_padding_leftright"
        android:layout_marginRight="@dimen/activity_padding_leftright"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/confirm_fix"
        android:textColor="@color/colorWhiteText"
        android:textSize="16sp" />

</LinearLayout>