<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aioute.carloan.activity.BindPhoneActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/Bind_LinearLayout">

        <TextView
            style="@style/Bind_TextView"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/bindphone_phone_et"
            style="@style/Bind_EditText"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <include layout="@layout/devider_gray_match" />

    <LinearLayout style="@style/Bind_LinearLayout">

        <TextView
            style="@style/Bind_TextView"
            android:text="@string/auth_code" />

        <EditText
            android:id="@+id/bindphone_code_et"
            style="@style/Bind_EditText"
            android:layout_weight="1"
            android:hint="@string/intpu_auth_code"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/bindphone_code_btn"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:background="@color/colorAccent"
            android:text="@string/obtain_auth_code" />
    </LinearLayout>

    <Button
        android:id="@+id/bindphone_bind_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_padding_leftright"
        android:layout_marginRight="@dimen/activity_padding_leftright"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/bind" />

</LinearLayout>
