<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <cn.sft.view.AlwaysMarqueeTextView
            android:id="@+id/alarm_info_state_tv"
            style="@style/AlarmInfoStyle"
            android:text="@string/state" />

        <cn.sft.view.AlwaysMarqueeTextView
            android:id="@+id/alarm_info_group_tv"
            style="@style/AlarmInfoStyle"
            android:text="@string/group" />

        <cn.sft.view.AlwaysMarqueeTextView
            android:id="@+id/alarm_info_type_tv"
            style="@style/AlarmInfoStyle"
            android:text="@string/type" />

        <cn.sft.view.AlwaysMarqueeTextView
            android:id="@+id/alarm_info_time_tv"
            style="@style/AlarmInfoStyle"
            android:text="@string/time" />
    </LinearLayout>


    <ExpandableListView
        android:id="@+id/alarm_info_expandablelistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:childDivider="@null"
        android:divider="@null"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:groupIndicator="@null"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"></ExpandableListView>

</LinearLayout>
