<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aioute.carloan.activity.SingleDeviceOperActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/single_deviceoper_contain_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/single_deviceoper_rg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <cn.sft.view.DrawableCenterRadioButton
            android:id="@+id/single_deviceoper_detail_rb"
            style="@style/Main_RadioButton"
            android:drawableTop="@drawable/tab_info_bk"
            android:text="@string/info" />

        <cn.sft.view.DrawableCenterRadioButton
            android:id="@+id/single_deviceoper_position_rb"
            style="@style/Main_RadioButton"
            android:drawableTop="@drawable/tab_location_bk"
            android:text="@string/trace" />

        <cn.sft.view.DrawableCenterRadioButton
            android:id="@+id/single_deviceoper_trace_rb"
            style="@style/Main_RadioButton"
            android:drawableTop="@drawable/tab_back_bk"
            android:text="@string/history_view" />

        <cn.sft.view.DrawableCenterRadioButton
            android:id="@+id/single_deviceoper_setting_rb"
            style="@style/Main_RadioButton"
            android:drawableTop="@drawable/tab_set_bk"
            android:text="@string/setting" />

    </RadioGroup>

</LinearLayout>
