<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/base_setting"
        android:textSize="15sp" />

    <cn.sft.view.AlwaysMarqueeTextView
        android:id="@+id/settting_monitor_tv"
        style="@style/Setting_TextView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <cn.sft.view.AlwaysMarqueeTextView
        android:id="@+id/settting_trace_tv"
        style="@style/Setting_TextView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <cn.sft.view.AlwaysMarqueeTextView
        android:id="@+id/settting_warn_tv"
        style="@style/Setting_TextView"
        android:text="@string/warn_info_setting" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <cn.sft.view.AlwaysMarqueeTextView
        android:id="@+id/settting_fixpass_tv"
        style="@style/Setting_TextView"
        android:text="@string/fix_password" />

</LinearLayout>